src/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: 'montserratthin_italic';
    src: url("montserrat-italic-variablefont_wght-webfont.woff2") format("woff2"),
         url("montserrat-italic-variablefont_wght-webfont.woff") format("woff");
    font-weight: normal;
    font-style: italic; /* Changed to 'italic' for italic font style */
}

html {
    scroll-behavior: smooth; /* Added smooth scrolling behavior */
    cursor:crosshair;
}

body {
    background-color: white;
    margin: 0;
    padding: 0;
    font-family: 'montserratthin_italic';
    overflow-x: hidden;
    display: block;
}

/* You can specify specific elements where needed */
/* For example, if you want a container to use the custom font */
* {
    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

header{
    position: sticky;
    top: 0;
    z-index: 999;
}



main {
    width: 100%;
    height: inherit;
    margin: 0 auto;
    display: block;
    background: linear-gradient(90deg, #d4bfff, #c3c3f0);
    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
    padding: 10% 5% 200px; /* Adjust padding as needed */
    box-sizing: border-box;
    position: relative;
}

/* Slider Animation */
.slider-thumb::before {
    border: #000000;
    position: absolute;
    content: "";
    left: 50%;
    top: 0;
    width: 1200px; /* Increase the width to take up more space */
    height: 1200px; /* Increase the height to take up more space */
    background: #9e9ef2;
    border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
    will-change: border-radius, transform, opacity;
    animation: sliderShape 5s linear infinite;
    display: block;
    z-index: -1;
    -webkit-animation: sliderShape 5s linear infinite;
}


@keyframes sliderShape {
    0%, 100% {
        border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
        transform: translate3d(0, 0, 0) rotateZ(0.01deg);
    }
    34% {
        border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
        transform: translate3d(0, 5px, 0) rotateZ(0.01deg);
    }
    50% {
        transform: translate3d(0, 0, 0) rotateZ(0.01deg);
    }
    67% {
        border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%;
        transform: translate3d(0, -3px, 0) rotateZ(0.01deg);
    }
}

h1{
    font-size: inherit;
    color: #7f7fff;
    transition: transform 0.3s;
    /*text-shadow: 2px 0 transparent, -2px 0 rgb(255, 255, 255), 0 2px #9e9ef2, 0 -2px #ffffff,
             1px 1px #cab4ff, -1px -1px #ddd6ff, 1px -1px #d1c5ff, -1px 1px #bdbffa;
    */margin-top: 100px;
    font-weight: 100;
    font-size: 80px; 
}
h1:hover{
    transform: scale(1.05);
}

h2{
    font-size: 50PX;
    color: #d2b6f7;
    transition: transform 0.3s;
    text-shadow: 2px 0 transparent, -2px 0 transparent, 0 2px #866bd7, 0 -2px #000000,
             1px 1px #5113e2, -1px -1px #3a14e4, 1px -1px #4010f0, -1px 1px #050ef9;
    margin-top: 100px;
    font-weight: 100;
    font-size: 80px; 
    text-align: center;
}
h2:hover{
    transform: scale(1.05);
}

h3{
    font-size: 40PX;
    color: #eadbff;
    transition: transform 0.3s;
    text-shadow: 2px 0 transparent, -2px 0 transparent, 0 2px #866bd7, 0 -2px #000000,
             1px 1px #5113e2, -1px -1px #3a14e4, 1px -1px #4010f0, -1px 1px #050ef9;
    margin-top: 100px;
    font-weight: 100;
    font-size: 80px; 
    text-align: center;
    align-self: center;
}
h3:hover{
    transform: scale(1.05);
}

h6 {
    color: white;
}

p {
    font-size: inherit;
    color: #7f7fff;
    transition: transform 0.3s;
    /*text-shadow: 2px 0 transparent, -2px 0 rgb(255, 255, 255), 0 2px #9e9ef2, 0 -2px #ffffff,
             1px 1px #cab4ff, -1px -1px #ddd6ff, 1px -1px #d1c5ff, -1px 1px #bdbffa;
    */
    font-weight: 100;
}

.welcome-text {
    display: flex;
    justify-content: left;
    align-items: left; /* Center vertically and horizontally */
    padding: 30px;
    padding-top: 100px;
    color: #be8dff;
    transition: transform 0.3s;
    font-size: inherit;
    min-height: 90vh; /* Increase the minimum height */
}


/* Header Styles */


/* Main Content Styles */
main {
    color: antiquewhite;
    width: 100%;
    padding: 20px;
    margin-top: 0;
    padding-top: 100px;
    position: relative;
}


/* changes
/* Heading Styles */
.h1 {
    color: black;
    padding: 100px;
}

h2 {
    color: black;
    background-color: rgba(70, 70, 70, 0.8);
    padding: 100px;
    background-image: url(/Images/Computer.jpg);
}

h2:hover {
    color: black;
    transform: scale(1.05);
    background-color: rgba(70, 70, 70, 1);
    transition: transform 0.4s;
}

/* Article Text Styles */

.article-text {
    background-color:#adadff;
    color: antiquewhite;
    padding: 10px;
    margin-top: 10px;
    opacity: 10;
    transition: transform 0.3s;
    text-align: center;
    align-items:center;
    place-items: center;
}



.article-text:hover {
    transform: scale(1.05);
    background-color:rgb(135, 0, 253);
    opacity: 100;
}

/* Button Styles */

.tablinks {
    position: relative;
    color: #fff;
    text-decoration: none;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    padding: 0rem 1rem; /* Adjust the initial padding as needed */
    transition: 0.8s;
}

.tablinks:hover {
    color: #320c99;
    letter-spacing: 0.2rem;
    padding: 1.1rem 1.1rem; /* Adjust the initial and hover padding as needed */
    box-shadow: 0 0 35px var(--clr);
}

/* Project Container Styles */

.flex-row {
    background-color: #050ef9;
    display: flex;
    flex-direction:column-reverse; /* Set flex direction to column */
    align-items: center; /* Align items at the center horizontally */
}

/* Adjustments to maintain spacing */
.article-text {
    text-align: center;
    margin-top: 4px;
}

.flex-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Style for the project container */
.project-row {
    background: linear-gradient(90deg, #d4bfff, #c3c3f0);
    border-width: 20px;
    border-color: #9e9ef2;
    height: inherit;

    padding: 0px;
    /* Your styles for the entire container */
  }
  
  /* Style for each individual project block */
  .project-block {
  }
  
  /* Style for the paragraph inside each project block */
  .project-block p {
    /* Your styles for the paragraph text */
  }
  
  /* Style for the images inside each project block */
  .project-block img {
    /* Your styles for the images */
  }

#new {
    background-image: url(Computer.jpg);
    background-size:cover;
    background-attachment: fixed;
    margin-top: 40px;
}

.forms {
    height: 100%; /* Set the height to 100% */
    background: linear-gradient(90deg, #d4bfff, #c3c3f0);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    padding-right: 0%;
    text-align: left;
    padding: 20px 30px;
    /*clip-path: polygon(0% 15%, 100% 2%, 100% 100%, 0% 90%, 0% 20%);*/
}

/* Form Styles */

input[type=text], select, textarea {
    width: 100%;
    padding: 12px;
    background-color:rgb(127, 112, 168);
    border: 1px solid rgb(120, 97, 182);
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
    opacity: 0.7;
    color: rgb(255, 255, 255);
}

input[type=email], select, textarea {  
    width: 100%;
    padding: 12px;
    background-color: rgb(127, 112, 168);
    border: 1px solid rgb(120, 97, 182);
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
    opacity: 0.7;
    color: rgb(255, 255, 255);
}

.links {
    display: flex;
    justify-content: center;
    align-items: center; /* Center vertically and horizontally */
    padding: 10px;
    color: rgb(230, 230, 230);
    font-size: 20px;
    background-color: rgb(14, 3, 37);
}

